# Cabbage-AI-search-Engine

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cabbage/: __init__.py  api_server.py  config.json  main_processor.py  scraper.py  search_module.py
examples/: anthropic_tool_example.py  client_example.py  library_usage_example.py  mistral_tool_example.py  openai_tool_example.py
